GNOME Bugzilla – Bug 680356
crashes if unable to create a root surface for background
Last modified: 2012-07-21 15:12:43 UTC
Maximum number of clients reached (nautilus:11353): GnomeDesktop-WARNING **: Unable to open display ':5' when setting background pixmap Program received signal SIGSEGV, Segmentation fault. cairo_surface_set_user_data (surface=surface@entry=0x0, key=key@entry=0x7ffff7554970, user_data=0xc0f340, destroy=0x7ffff69ecd80 <gdk_rgba_free>) at cairo-surface.c:794 794 if (CAIRO_REFERENCE_COUNT_IS_INVALID (&surface->ref_count))
+ Trace 230549
Created attachment 219371 [details] [review] Don't use wallpaper surface if it NULL
Review of attachment 219371 [details] [review]: Looks good...what did you do to make this happen?
I think what happened was that gnome-desktop was interpreting the file monitor "changed" unconditionally and I added ACCESSED to it. It kept updating the root pixmap and I guess leaking it every time and it started to fail. When it failed we started to fail as well.
Also see bug 680354.