Don't use wallpaper surface if it NULL

https://bugzilla.gnome.org/show_bug.cgi?id=680356